add working packages: gulp, bower, jquery, and bootstrap

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h1>Galactic</h1>
+    <div class="errorCode"></div>
 
   </body>
 </html>
