--- a/index.html
+++ b/index.html
@@ -8,7 +8,47 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Galactic</h1>
+    <div class="container">
+      <h1>Galactic Age Calculator</h1>
+
+      <div class="card" style="width: 26rem;">
+
+        <div class="card-body">
+          <form id="userBirthDay">
+            <div class="input-group input-group-sm mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="">Enter Date Of Birth</span>
+              </div>
+              <input type="number" class="form-control-sm" id="year" placeholder="1970" maxlength="4">
+              <input type="number" class="form-control-sm" id="month" placeholder="01" maxlength="2">
+              <input type="number" class="form-control-sm" id="day" placeholder="01" maxlength="2">
+            </div>
+            <div class="input-group input-group-sm mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Average Life Expectancy</span>
+              </div>
+              <input type="number" class="form-control-sm" id="avgLife" placeholder="100">
+            </div>
+            <button type="submit" class="btn btn-primary">Calculate</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="card text-white mb-3" style="width: 18rem;">
+        <div class="card-body">
+
+          <img class="card-img-top" src="img/earth.png" alt="Card image cap">
+          <h5 class="card-title">Earth</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Your age on Earth: <span id="earthAge"></span></li>
+            <li class="list-group-item">Average life expectancy: <span id="getAvgEarth"></span></li>
+            <li class="list-group-item">365 Earth Days in a Year</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+
     <h3 id="time"></h3>
     <div class="errorCode"></div>
 
